# handson-scientific-literature-embeddings

./: .gitignore  README.md  main.py  pyproject.toml
content/: _config.yml  _content.yml  _toc.yml  arxiv.ipynb  arxiv_papers.json  embeddings.md  extract_arxiv.ipynb  intro.md  literature_mining.ipynb  sentence_embeddings.ipynb  setup.md  tokens.md  word_embeddings.ipynb
