[project]
name = "handson-scientific-litterature-embeddings"
version = "0.1.0"
description = "Hands-on Session: Exploring physical sciences scientific literature using embeddings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.4.2",
    "gensim>=4.3.2",
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy==1.12",
]
