[project]
name = "handson-scientific-litterature-embeddings"
version = "0.1.0"
description = "Hands-on Session: Exploring physical sciences scientific literature using embeddings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.18",
    "fastembed>=0.4.2",
    "gensim>=4.3.3",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy==1.12",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "jupyter-book>=1.0.4.post1",
]
